--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,6 @@
         }
     },
     "require": {
-        "Illuminate/support": "~5",
-        "illuminate/html": "*"
+        "Illuminate/support": "~5"
     }
 }
